--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "gatsby": "^2.15.28",
     "gatsby-image": "^2.2.23",
     "gatsby-plugin-catch-links": "^2.1.12",
@@ -36,6 +38,8 @@
     "react-helmet": "^5.2.1",
     "react-share": "^3.0.1",
     "react-twitter-widgets": "^1.7.1",
+    "typeface-rubik": "0.0.72",
+    "typography": "^0.16.19",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
